clean up package.json

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "game-vision",
-  "version": "1.0.0",
+  "name": "@wescopeland/game-vision",
+  "version": "0.0.1",
   "description": "Extensible framework for real-time video game performance analysis",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "start": "./node_modules/nodemon/bin/nodemon.js -e ts --exec \"npm run compile\"",
     "compile": "tsc && node ./dist/index.js",
