--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "@wescopeland/game-vision",
   "version": "0.0.1",
   "description": "Extensible framework for real-time video game performance analysis",
-  "main": "dist/index.js",
+  "main": "lib/index.js",
   "scripts": {
     "start": "./node_modules/nodemon/bin/nodemon.js -e ts --exec \"npm run compile\"",
-    "compile": "tsc && node ./dist/index.js",
-    "debug": "ndb ./dist/index.js",
+    "compile": "tsc && node ./lib/index.js",
+    "debug": "ndb ./lib/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -16,14 +16,19 @@
     "@types/node": "^10.11.7",
     "@types/tesseract.js": "0.0.2",
     "ndb": "^1.0.26",
-    "nodemon": "^1.18.4"
+    "nodemon": "^1.18.4",
+    "typescript": "^3.1.3"
   },
   "dependencies": {
+    "app-root-path": "^2.1.0",
     "color-diff": "^1.1.0",
     "jimp": "^0.5.4",
     "shortid": "^2.2.13",
     "tesseract.js": "^1.0.10",
     "window-screenshot": "^1.0.0",
     "window-tracker": "^1.0.1"
-  }
+  },
+  "files": [
+    "**/tiles/*.png"
+  ]
 }
