--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,12 @@
 {
   "compilerOptions": {
-    "target": "es6",
+    "lib": ["es2015", "dom"],
+    "target": "es5",
     "module": "commonjs",
-    "outDir": "dist",
+    "outDir": "./lib",
     "sourceMap": true
   },
   "include": ["src/**/*.ts"],
-  "exclude": ["node_modules", "../game-vision/node_modules"]
+  "exclude": ["node_modules"],
+  "rootDir": "src"
 }
